--- a/src/components/Recipe.module.css
+++ b/src/components/Recipe.module.css
@@ -4,15 +4,16 @@
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
-    width: 280px;
-    margin: 30px 40px;
+    width: clamp(160px, 20vw, 280px);
+    margin: 1% 2%;
     color: #fff;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .recipe img {
     width: 100%;
+    border: #000 solid 2px;
     border-radius: 8px;
+    box-shadow: 10px 10px 20px -10px #000;
 }
 
 .recipeText {
@@ -20,6 +21,8 @@
     flex-direction: column;
     position: absolute;
     bottom: 10%;
+    font-size: clamp(12px, 1.5vw, 16px);
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .clocEmoji {
