--- a/src/components/SearchBox.module.css
+++ b/src/components/SearchBox.module.css
@@ -1,7 +1,7 @@
 .searchBox {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: clamp(3px, 1vw, 8px);
     border-radius: 8px;
     background-color: rgb(255, 255, 255);
     border: solid #000 1px;
