--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ a {
     text-align: center;
 }
 
+.content h2 {
+    color: #000;
+    font-size: clamp(18px, 5vw, 24px);
+}
+
 .recipes-container {
     display: flex;
     justify-content: space-around;
