--- a/src/components/Recipe.module.css
+++ b/src/components/Recipe.module.css
@@ -1,30 +1,38 @@
 .recipe {
-    position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
     width: clamp(160px, 20vw, 280px);
     margin: 1% 2%;
-    color: #fff;
+    border: #000 solid 2px;
+    border-radius: 8px;
+    box-shadow: 10px 10px 20px -15px #000;
+    background-color: #f3ffec;
 }
 
 .recipe img {
-    width: 100%;
-    border: #000 solid 2px;
+    width: 90%;
+    margin: 5% 5% 0 5%;
     border-radius: 8px;
-    box-shadow: 10px 10px 20px -10px #000;
 }
 
 .recipeText {
     display: flex;
     flex-direction: column;
-    position: absolute;
-    bottom: 10%;
+    justify-content: space-around;
+    height: 100%;
+    margin: 10px 5%;
     font-size: clamp(12px, 1.5vw, 16px);
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    color: #000;
 }
 
-.clocEmoji {
-    text-shadow: none;
+.recipeLink {
+    display: flex;
+    justify-content: center;
+    margin: 10px 5% 0 5%;
+    padding: 5px 0;
+    color: #000;
+    background-color: rgb(170, 236, 192);
+    border: green solid 2px;
+    border-radius: 7px;
+    font-size: clamp(12px, 1.5vw, 16px);
 }
