--- a/src/components/Recipe.module.css
+++ b/src/components/Recipe.module.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     width: clamp(160px, 20vw, 280px);
     margin: 1% 2%;
-    border: #000 solid 2px;
     border-radius: 8px;
     box-shadow: 10px 10px 20px -15px #000;
     background-color: #f3ffec;
@@ -12,16 +11,17 @@
 .recipe img {
     width: 90%;
     margin: 5% 5% 0 5%;
-    border-radius: 8px;
+    border-radius: 8px 8px 0 0;
 }
 
 .recipeText {
+    font-family: 'PT Serif', serif;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     height: 100%;
     margin: 10px 5%;
-    font-size: clamp(12px, 1.5vw, 16px);
+    font-size: clamp(12px, 1.5vw, 15px);
     color: #000;
 }
 
@@ -32,7 +32,5 @@
     padding: 5px 0;
     color: #000;
     background-color: rgb(170, 236, 192);
-    border: green solid 2px;
     border-radius: 7px;
-    font-size: clamp(12px, 1.5vw, 16px);
 }
