--- a/src/components/Recipe.module.scss
+++ b/src/components/Recipe.module.scss
@@ -1,20 +1,23 @@
 .recipe {
+    position: relative;
     display: flex;
     flex-direction: column;
     width: clamp(160px, 20vw, 280px);
-    margin: 1% 2%;
-    border-radius: 8px;
-    box-shadow: 10px 10px 20px -15px #000;
+    margin: clamp(12.5px, 1vw, 25px) clamp(15px, 1vw, 50px);
+    border-radius: 7px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     background-color: #f3ffec;
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 
     img {
         width: 90%;
         margin: 5% 5% 0 5%;
-        border-radius: 8px 8px 0 0;
+        border-radius: 7px 7px 0 0;
     }
 
     .text {
-        font-family: 'PT Serif', serif;
+        font-weight: 700;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
@@ -23,17 +26,34 @@
         font-size: clamp(12px, 1.5vw, 15px);
         color: #000;
     }
-    
+
     .button {
         display: flex;
         justify-content: center;
         margin: 10px 5% 0 5%;
         padding: 5px 0;
-        color: #000;
+        border-radius: 5px;
+        font-size: clamp(11px, 1vw, 13px);
         background-color: rgb(170, 236, 192);
-        border-radius: 7px;
+        color: #000;
     }
 }
 
+.recipe::after {
+    content: "";
+    border-radius: 5px;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    opacity: 0;
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
 
-
+.recipe:hover::after {
+    opacity: 1;
+}
